Closed Bug 716702 Opened 13 years ago Closed 13 years ago

jsopcode.h:661:5: warning: C++ style comments are not allowed in ISO C90

Categories

(Core :: JavaScript Engine, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla12

People

(Reporter: dholbert, Assigned: dholbert)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Filing bug on this build warning, which we get many copies of (since this header seems to be include in a lot of files): { jsopcode.h:661:5: warning: C++ style comments are not allowed in ISO C90 [enabled by default] jsopcode.h:661:5: warning: (this will be reported only once per input file) [enabled by default] } This warning is for this line: > 663 // Boolean conversion, for 'if (counters) ...' http://mxr.mozilla.org/mozilla-central/source/js/src/jsopcode.h#663 which was added in http://hg.mozilla.org/mozilla-central/rev/de66e7bd2b98 for bug 687134.
Attached patch fixSplinter Review
This changes the comment to be /* .... */ instead of // though I seem to recall JS engine preferring this style: /* * comment */ Happy to change it to that form if that's better; just let me know.
Assignee: general → dholbert
Status: NEW → ASSIGNED
Attachment #587167 - Flags: review?(bhackett1024)
Attachment #587167 - Flags: review?(bhackett1024) → review+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: