Bug 716702: Fix C++-style comment in header 'jsopcode.h' that gets included in C code. r=bhackett